--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 	<link rel="icon" type="image/jpg" href="logo.jpg">
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+<style>
+  body{
+  	 background-image: url("homewallpaper.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  	}
+</style>
 </head>
 
 <body class="body" onload= "startTime()">
